--- a/Diarista/Diarista.Core.Models/Diarista.Core.Models.csproj
+++ b/Diarista/Diarista.Core.Models/Diarista.Core.Models.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DataModels\" />
+    <Folder Include="Views\" />
+    <Folder Include="ViewsModels\" />
+  </ItemGroup>
+
 </Project>
