--- a/Diarista/Diarista.Core.Services/Diarista.Core.Services.csproj
+++ b/Diarista/Diarista.Core.Services/Diarista.Core.Services.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Handler\" />
+    <Folder Include="Mapper\" />
+    <Folder Include="Services\Interfaces\" />
+  </ItemGroup>
 
 </Project>
