--- a/Diarista/Diarista.Infra.Data/Diarista.Infra.Data.csproj
+++ b/Diarista/Diarista.Infra.Data/Diarista.Infra.Data.csproj
@@ -10,8 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Mappings\" />
+    <ProjectReference Include="..\Diarista.Core.Models\Diarista.Core.Models.csproj" />
   </ItemGroup>
 
 </Project>
